change color of sakura, overflow hidden to prevent scroll body

--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 body {
   background-color: #00aacc;
+  overflow: hidden;  
 }
 
 .sakura {
-  background: #ffdddd;
+  background: #ffb0dd;
   border-radius: 80% 30%;
 }
